<resources>
    <string name="app_name">Empleate</string>
    <string name="login_name">LogIn</string>
    <string name="profile_name">Mi Perfil</string>
    <string name="load_img">Loading</string>
    <string name="log_descriptio">Logo</string>
    <string name="title_activity_login">Iniciar Sesión</string>
    <string name="user_login">Usuario</string>
    <string name="pass_login">Contraseña</string>
    <string name="acceder_login">Acceder</string>

    <string name="nombre">Nombre</string>
    <string name="apellidos">Apellidos</string>
    <string name="hombre">Hombre</string>
    <string name="mujer">Mujer</string>
    <string name="fecha_nac">Fecha Nacimiento</string>
    <string name="email">Email</string>
    <string name="dni">DNI</string>
    <string name="telefono_fijo">Teléfono Fijo</string>
    <string name="telefono_movil">Teléfono Movil</string>
    <string name="direccion">Dirección</string>
    <string name="text_titulacion">Titulación</string>
    <string name="text_puesto">Puesto</string>
    <string name="text_empresa">Empresa</string>
    <string name="text_centro">Centro Estudios</string>
    <string name="text_anyofin">Año Fin</string>
    <string name="text_mesfin">Mes Fin</string>
    <string name="text_meses">Meses</string>

    <string name="acceso_listado">Listado de Ofertas</string>
    <string name="acceso_perfil">Mi Perfil</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_index_drawer">IndexDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_save">Save</string>
    <string name="action_refresh">Refresh</string>
    <string name="title_activity_profile_tabs">ProfileTabsActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="text_welcome">WELCOME TO EMPLEATE</string>
</resources>
